// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`insert text at end 1`] = `
<div
  id="__next"
>
  <div
    class="jsx-442929638"
  >
    ·Basic Example·
  </div>
  <div
    autocorrect="off"
    contenteditable="true"
    data-gramm="true"
    role="textbox"
    spellcheck="false"
    style="background-color: rgb(238, 238, 238); margin-bottom: 24px; outline: none; padding: 8px; width: 300px;"
    tabindex="0"
  >
    <div
      class="root"
    >
      ·ahoj·
    </div>
  </div>
  <pre
    class="jsx-2255726786"
  >
    <span
      class="jsx-4269328595"
      data-json="{'tag':'div','props':{'className':'root'},'children':['ahoj']}"
    >
      ·5 {'hasFocus':true,'selection':{'anchor':[0,4],'focus':[0,4]}}·
    </span>
    <span
      class="jsx-4269328595"
      data-json="{'tag':'div','props':{'className':'root'},'children':['aho']}"
    >
      ·4 {'hasFocus':true,'selection':{'anchor':[0,3],'focus':[0,3]}}·
    </span>
    <span
      class="jsx-4269328595"
      data-json="{'tag':'div','props':{'className':'root'},'children':['ah']}"
    >
      ·3 {'hasFocus':true,'selection':{'anchor':[0,2],'focus':[0,2]}}·
    </span>
    <span
      class="jsx-4269328595"
      data-json="{'tag':'div','props':{'className':'root'},'children':['a']}"
    >
      ·2 {'hasFocus':true,'selection':{'anchor':[0,1],'focus':[0,1]}}·
    </span>
    <span
      class="jsx-4269328595"
      data-json="{'tag':'div','props':{'className':'root'},'children':['a']}"
    >
      ·1 {'hasFocus':true,'selection':{'anchor':[0,0],'focus':[0,0]}}·
    </span>
    <span
      class="jsx-4269328595"
      data-json="{'tag':'div','props':{'className':'root'},'children':['a']}"
    >
      ·0 {'hasFocus':true}·
    </span>
  </pre>
</div>
`;

exports[`insert text at start then middle 1`] = `
<div
  id="__next"
>
  <div
    class="jsx-442929638"
  >
    ·Basic Example·
  </div>
  <div
    autocorrect="off"
    contenteditable="true"
    data-gramm="true"
    role="textbox"
    spellcheck="false"
    style="background-color: rgb(238, 238, 238); margin-bottom: 24px; outline: none; padding: 8px; width: 300px;"
    tabindex="0"
  >
    <div
      class="root"
    >
      ·bla·
    </div>
  </div>
  <pre
    class="jsx-2255726786"
  >
    <span
      class="jsx-4269328595"
      data-json="{'tag':'div','props':{'className':'root'},'children':['bla']}"
    >
      ·3 {'hasFocus':true,'selection':{'anchor':[0,2],'focus':[0,2]}}·
    </span>
    <span
      class="jsx-4269328595"
      data-json="{'tag':'div','props':{'className':'root'},'children':['ba']}"
    >
      ·2 {'hasFocus':true,'selection':{'anchor':[0,1],'focus':[0,1]}}·
    </span>
    <span
      class="jsx-4269328595"
      data-json="{'tag':'div','props':{'className':'root'},'children':['a']}"
    >
      ·1 {'hasFocus':true,'selection':{'anchor':[0,0],'focus':[0,0]}}·
    </span>
    <span
      class="jsx-4269328595"
      data-json="{'tag':'div','props':{'className':'root'},'children':['a']}"
    >
      ·0 {'hasFocus':true}·
    </span>
  </pre>
</div>
`;

exports[`remove text 1`] = `
<div
  id="__next"
>
  <div
    class="jsx-442929638"
  >
    ·Basic Example·
  </div>
  <div
    autocorrect="off"
    contenteditable="true"
    data-gramm="true"
    role="textbox"
    spellcheck="false"
    style="background-color: rgb(238, 238, 238); margin-bottom: 24px; outline: none; padding: 8px; width: 300px;"
    tabindex="0"
  >
    <div
      class="root"
    >
      <br />
    </div>
  </div>
  <pre
    class="jsx-2255726786"
  >
    <span
      class="jsx-4269328595"
      data-json="{'tag':'div','props':{'className':'root'},'children':['']}"
    >
      ·7 {'hasFocus':true,'selection':{'anchor':[0],'focus':[0]}}·
    </span>
    <span
      class="jsx-4269328595"
      data-json="{'tag':'div','props':{'className':'root'},'children':['b']}"
    >
      ·6 {'hasFocus':true,'selection':{'anchor':[0,1],'focus':[0,1]}}·
    </span>
    <span
      class="jsx-4269328595"
      data-json="{'tag':'div','props':{'className':'root'},'children':['']}"
    >
      ·5 {'hasFocus':true,'selection':{'anchor':[0],'focus':[0]}}·
    </span>
    <span
      class="jsx-4269328595"
      data-json="{'tag':'div','props':{'className':'root'},'children':['a']}"
    >
      ·4 {'hasFocus':true,'selection':{'anchor':[0,1],'focus':[0,1]}}·
    </span>
    <span
      class="jsx-4269328595"
      data-json="{'tag':'div','props':{'className':'root'},'children':['a']}"
    >
      ·3 {'hasFocus':true,'selection':{'anchor':[0,0],'focus':[0,0]}}·
    </span>
    <span
      class="jsx-4269328595"
      data-json="{'tag':'div','props':{'className':'root'},'children':['ba']}"
    >
      ·2 {'hasFocus':true,'selection':{'anchor':[0,1],'focus':[0,1]}}·
    </span>
    <span
      class="jsx-4269328595"
      data-json="{'tag':'div','props':{'className':'root'},'children':['a']}"
    >
      ·1 {'hasFocus':true,'selection':{'anchor':[0,0],'focus':[0,0]}}·
    </span>
    <span
      class="jsx-4269328595"
      data-json="{'tag':'div','props':{'className':'root'},'children':['a']}"
    >
      ·0 {'hasFocus':true}·
    </span>
  </pre>
</div>
`;
